toList修改为collect(Collectors.toList())